@@ -1,3 +1,12 @@
+2005-09-24  Richard Henderson  <rth@redhat.com>
+
+	* iter.c (gomp_iter_static_next): Round up when computing number
+	of iterations.  Don't bother distributing a remainder equally.
+
+	* testsuite/libgomp.dg/omp-loop01.c (main1): Rename from main.
+	Don't call srand.  Zero b before testing.
+	(main): New.
+
 2005-09-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/libgomp.fortran/omp_atomic1.f90: New test.
